# keycen

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: default.toml
src/: app.rs  main.rs
src/appfilter/: linux.rs  macos.rs  mod.rs  windows.rs
src/buffer/: classifier.rs  mod.rs
src/config/: mod.rs  watcher.rs
src/correction/: grab_corrector.rs  listen_corrector.rs  mod.rs
src/filter/: mod.rs  rustrict_filter.rs
src/input/: grab.rs  listen.rs  mod.rs
src/tray/: menu.rs  mod.rs
tests/: buffer_tests.rs  config_tests.rs  correction_tests.rs  filter_tests.rs  integration_tests.rs
