[package]
name = "keycen"
version = "0.1.0"
edition = "2021"
description = "OS-level profanity autocorrect sensor"
license = "MIT"
readme = "README.md"

[dependencies]
# Keyboard hooks (global listen/grab/simulate)
rdev = { version = "0.5", features = ["unstable_grab"] }

# Profanity detection
rustrict = { version = "0.7", features = ["censor", "customize"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# System tray
tray-icon = "0.22"

# File watching (config hot-reload)
notify = "8"

# Logging
log = "0.4"
env_logger = "0.11"

# Misc
once_cell = "1"

# Platform-specific active window detection
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
core-foundation = "0.9"

[profile.release]
opt-level = 3
lto = true
strip = true
